syntax = "proto3";

package message;

option go_package = "github.com/spatialwalk/avatar-sdk-go/proto/generated/message";

enum MessageType {
  MESSAGE_UNSPECIFIED = 0;
  MESSAGE_ERROR = 2;
  MESSAGE_SERVER_RESPONSE_ANIMATION = 1004;
  MESSAGE_CLIENT_AUDIO_INPUT = 2003;
}

message ClientAudioInputData {
  string req_id = 1;
  bytes audio = 2;
  bool end = 3;
}

message ErrorInfo {
  string req_id = 1;
  int32 code = 2;
  string reason = 3;
}

message Message {
  MessageType type = 1;
  oneof data {
    ErrorInfo error = 2;
    ClientAudioInputData client_audio_input = 4;
  }
}
